2015-04-22  Per Bothner  <per@bothner.com>

	* repl.java: Re-write to support "--with-arg-count=N" option.
	(processArgs): Move argument-processing logic to new non-static method.
	Also handle processing of final named-module or repl default action.
	(processArgs): Old method creates instance and calls new method.
	(main): Simplify by calling new processArgs.
	(getArgs): new method to handle --with-arg-count processing.
	(<init>): New default constructor.
	(error): New convenience method.

2015-04-18  Per Bothner  <per@bothner.com>

	Implement "scan" (ellipsis) patterns and context.
	* lang/BindDecls.java (parsePatternCar, parseBracketListPattern):
	Take extra scanNesting parameter.
	(parsePatternCar): Set scanNesting of declarations.
	(parseBracketListPattern): If we see ellipsis, increment scan-nesting.
	* lang/SyntaxTemplate.java (dots3Symbol): Redefine.
	* lang/Translator.java (rewrite_pair): Check for ellipsis.
	(rewrite): Check if referencing a scan declaration.
	(currentScanContext): New field.
	(getScanContext, setScanContext, pushScanContext, popScanContext):
	New methods.
	(class ScanContext): Helper class.
	* standard/Scan.java: New Syntax.
	* Makefile.am: Update accordingly.
	* standard/Scheme.java: Define 'scan' syntax.
	* lang/Lambda.java: Update parsePatternCar invocation.
	* standard/MatchDef.java: Likewise.
	* standard/let.java: Likewise.

2015-04-15  Per Bothner  <per@bothner.com>

	* lang/Macro.java (expand): If transformer throws an exception,
	pass this to the SourceError.

2015-04-14  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (scanImportSet): Implement
	'class' clause for import, as an alternative to define-alias.
	(ImportSetMapper.map): Add 'rename' functionality to the 'only' clause.
	* standard/require.java (DeclSetMapper): Change parameter and return
	type of map method to be more general.

	* Shell.java (run): Call flush after checkErrors.  This is needed